--- a/BeerRatings/app/src/main/res/layout/fragment_beer.xml
+++ b/BeerRatings/app/src/main/res/layout/fragment_beer.xml
@@ -11,9 +11,10 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="7dip"
         android:paddingLeft="10dip"
-        android:width="205dip"
-        android:textSize="16dip"
+        android:width="228dip"
+        android:textSize="14dip"
         android:textStyle="bold"
         android:id="@+id/beer_name"
         android:layout_column="0"
@@ -23,9 +24,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:width="51dip"
-        android:padding="10dip"
-        android:textSize="16dip"
+        android:padding="7dip"
+        android:textSize="14dip"
         android:textStyle="bold"
+        android:textAlignment="textEnd"
         android:id="@+id/rating_ba"
         android:layout_column="1"
         android:layout_row="0"/>
@@ -33,8 +35,10 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="7dip"
         android:paddingLeft="60dip"
-        android:textSize="16dip"
+        android:width="51dip"
+        android:textSize="14dip"
         android:textStyle="bold"
         android:id="@+id/rating_untappd"
         android:layout_column="2"
